GFB-18 migrate from Date to Instant to fix the quality gate (#51)